--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.5",
         "sass-loader": "^8.0.2",
-        "tailwindcss": "^2.0.2"
+        "tailwindcss": "^2.0.2",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "toastr": "^2.1.4"
