--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "toastr": "^2.1.4"
+        "open-sans-fonts": "^1.6.2",
+        "toastr": "^2.1.4",
+        "uuid": "^8.3.2"
     }
 }
