--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "open-sans-fonts": "^1.6.2",
         "toastr": "^2.1.4",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "vue-js-modal": "^2.0.0-rc.6"
     }
 }
