--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@kouts/vue-modal": "^2.0.1",
         "moment": "^2.29.1",
         "open-sans-fonts": "^1.6.2",
         "toastr": "^2.1.4",
